Fixed text overflow, vertex update, event creation validations

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -42,6 +42,7 @@ nav {
 #events {
   margin: 0 auto;
   width: 100%;
+  word-wrap: break-word;
   .box {
 	  margin: 10px;
 	  width: 350px;
@@ -72,6 +73,7 @@ nav {
 #recommendations {
   margin: 0 auto;
   width: 100%;
+  word-wrap: break-word;
   .box {
 	  margin: 10px;
 	  width: 250px;
@@ -102,6 +104,7 @@ nav {
 #invites {
   margin: 0 auto;
   width: 100%;
+  word-wrap: break-word;
   .box {
 	  margin: 10px;
 	  width: 250px;
@@ -144,6 +147,7 @@ nav {
 	}
 	.panel-heading-text {
 		padding: 35px;
+		word-wrap: break-word;
 		h1 {
 			margin: 0 0 10px 0;
 		}
@@ -158,6 +162,7 @@ nav {
 	}
 	.panel-body {
 		padding: 35px;
+		word-wrap: break-word;
 		h1 {
 			margin: 0 0 10px 0;
 		}
